--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-screen-keyboard",
   "version": "1.0.0",
-  "description": "[![npm](https://img.shields.io/npm/v/react-native-pins.svg?style=flat-square)](https://www.npmjs.com/package/react-native-pins) [![npm licence](http://img.shields.io/npm/l/react-native-pins.svg?style=flat-square)](https://npmjs.org/package/react-native-pins) [![npm downloads](http://img.shields.io/npm/dt/react-native-pins.svg?style=flat-square)](https://npmjs.org/package/react-native-pins)",
+  "description": "On-screen keyboard with customisable keys and tactile / UI feedback 📱",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +18,18 @@
   "homepage": "https://github.com/lukebrandonfarrell/react-native-screen-keyboard#readme",
   "dependencies": {
     "react-native-material-ripple": "git+https://github.com/lukebrandonfarrell/react-native-material-ripple.git"
-  }
+  },
+  "keywords": [
+    "on-screen",
+    "on-screen-keyboard",
+    "screen",
+    "keyboard",
+    "feedback",
+    "react-native",
+    "native",
+    "javascript",
+    "pins",
+    "pin-code",
+    "react-native-pins"
+  ]
 }
