--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "On-screen keyboard with customisable keys and tactile / UI feedback 📱",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "repository": {
     "type": "git",
