--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "On-screen keyboard with customisable keys and tactile / UI feedback 📱",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable",
+    "pre-commit": "lint-staged",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -31,5 +35,14 @@
     "pins",
     "pin-code",
     "react-native-pins"
-  ]
+  ],
+  "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "pinst": "^2.1.6",
+    "prettier": "^2.3.0",
+    "semantic-release": "^17.4.3"
+  }
 }
