--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/lukebrandonfarrell/react-native-screen-keyboard#readme",
   "dependencies": {
+    "deprecated-react-native-prop-types": "^2.2.0",
     "react-native-material-ripple": "git+https://github.com/aspect-apps/react-native-material-ripple.git"
   },
   "keywords": [
