--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lukebrandonfarrell/react-native-screen-keyboard.git"
+    "url": "https://github.com/lukebrandonfarrell/react-native-screen-keyboard.git"
   },
   "author": "Luke Brandon Farrell",
   "license": "MIT",
