--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/lukebrandonfarrell/react-native-screen-keyboard#readme",
   "dependencies": {
     "deprecated-react-native-prop-types": "^2.2.0",
-    "react-native-material-ripple": "git+https://github.com/lukebrandonfarrell/react-native-material-ripple.git"
+    "react-native-material-ripple": "github:lukebrandonfarrell/react-native-material-ripple"
   },
   "keywords": [
     "on-screen",
